advanced/asm/k8s-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: gateway
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-http
    namespace: gateway
  hostnames:
  - "x-x-x-x.nip.io"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: istio-ingressgateway
      port: 80
